Fix truncation of tooltip items on small screens

--- a/src/amo/components/TooltipMenu/styles.scss
+++ b/src/amo/components/TooltipMenu/styles.scss
@@ -73,7 +73,7 @@
     button {
       overflow: hidden;
       text-overflow: ellipsis;
-      white-space: nowrap;
+      white-space: normal;
       width: 100%;
 
       &:not(.Button) {
